# AT1

./: README.md  pyproject.toml
data/: .~lock.Hydrophobic_clusters.csv#  .~lock.contacts_acids.csv#  .~lock.residues.ods#  Hydrogen_bond_networks.csv  Hydrophobic_clusters.csv  README.md  charge_repulsion.csv  contacts_acids.csv  contacts_ion_and_hydrophobic.csv  hydrogen_contacts.csv  model_res_dict.csv  mutants_suggestions.csv  residue_table.csv  residue_table.xlsx  residues.ods
data/old/: residues.ods
data/table_contacts/: HY.csv  IO.csv  PH.csv  RE.csv
diploma/: .~lock.2022.06.10.odp#  STRUCTURE.md
images/res_clusters/: README.md
notebooks/: 0_evaluate_distance_range.ipynb  1_generate_pml_scripts.ipynb  3_create_table_contacts.ipynb  3_drow_images.ipynb  README.md  concat_model_res_dict.ipynb  contacts.ipynb  create_table_contacts.ipynb  distances.ipynb  evaluate_ON_distance.ipynb  generate_hydrogen_contacts.ipynb  generate_scripts.ipynb  pipeline.ipynb  scripts_generate_new.ipynb
notebooks/old/: data_concat.ipynb  drow_images.ipynb  generate_scripts.ipynb  graph_reader.ipynb
python/: test.py
scripts/: 1lev.cif  1lev_tutorial.pml  4YAY.pml  example.pml  get_only_arr.pml  sample_pml_script.pml
scripts/0_get_AT1/: 4YAY.pml  4ZUD.pml  4yay.cif  6DO1.pml  6OS0.pml  6OS1.pml  6OS2.pml
scripts/0_get_arr/: 6PWC.pml  6TKO.pml  6U1N.pml  6UP7.pml
scripts/1_BW_arr/: 6PWC.pml  6TKO.pml  6U1N.pml  6UP7.pml
scripts/2_align/: 4YAY_6PWC.pml  4YAY_6TKO.pml  4YAY_6U1N.pml  4YAY_6UP7.pml  4ZUD_6PWC.pml  4ZUD_6TKO.pml  4ZUD_6U1N.pml  4ZUD_6UP7.pml  6DO1_6PWC.pml  (+15 more)
(+116 files in other folders)
