[tool.poetry]
name = "at1"
version = "0.1.0"
description = "Дипломный проект Кузнецова Глеба"
authors = ["gkuznetsov <gleb.kuznetsov@sbermarket.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
notebook = "^6.4.11"
pandas = "^1.4.2"
biopandas = "^0.4.1"
biopython = "^1.79"
matplotlib = "^3.5.2"
Pillow = "^9.1.1"

[tool.poetry.dev-dependencies]
plotly = "^5.8.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"